<resources>
    // Contents (Description)
    <string name="btn_home"> GoToHome </string>
    <string name="btn_tipos"> GoToTipos </string>
    <string name="btn_perfil"> GoToPerfil </string>
    <string name="btn_voltar"> ReturnToThePrevious </string>
    <string name="img_planta"> Planta </string>
    <string name="img_planta_tamanho"> Tamanho da Planta </string>
    <string name="img_planta_temp"> Temperatura média </string>
    <string name="img_planta_agua"> Quantidade de Agua </string>
    <string name="img_banner">Lorax</string>

    // Texts Globais
    <string name="app_name">Grow Truffles</string>

    // Texts Activity Main
    <string name="main_titulo_curiosidade">Você Sabia?</string>
    <string name="main_texto_curiosidade">Em 2022, 234.8 hectares de terras foram desmatados por hora; 5.636 hectares por dia. Desses, cerca de 3.267,5 hectares são da Amazônia. </string>
    <string name="main_titulo_populares">Plantas Populares</string>
    <string name="titulo_planta1">Lírio-Da-Paz</string>;
    <string name="titulo_planta2">Evônimo-Do-Japão</string>
    <string name="titulo_planta3">Bamdu-Da-Sorte</string>
    <string name="titulo_planta4">Hera</string>
    <string name="img_de_perfil">Imagem de Perfil</string>

    // Text Activity Tipos
    <string name="titulo_tipos">Principais Tipos</string>
    <string name="titulo_resistente">Plantas Resistentes</string>
    <string name="nome_planta_resistente1">Zamioculcas</string>
    <string name="nome_planta_resistente2">Camedórea-elegante</string>

    // Text Activity Perfil
    <string name="nome_usuario">Não Cadastrado</string>
    <string name="id_usuario">Cadastre-se</string>
    <string name="show_datas">Seus Dados</string>
    <string name="titulo_cadastro">Cadastre-se</string>
    <string name="nome">Digite seu nome: </string>
    <string name="usuario">Crie um nome de usuário: </string>
    <string name="telefone">Digite o número de telefone: </string>
    <string name="email">Digite um email: </string>
    <string name="senha">Defina uma senha: </string>
    <string name="edit_text_nome">Nome completo</string>
    <string name="edit_text_usuario">Ex: @M13f_Y</string>
    <string name="edit_text_email">example@email.com</string>
    <string name="edit_text_senha">Senha com oito digitos</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="nome_cadastrado">Seu nome de usuário é: </string>
    <string name="usuario_cadastrado">Seu código de usuário é: </string>
    <string name="email_cadastrado">Seu email é: </string>


    // Texts Activity Planta
    <string name="plantas_texto_voltar"> Sobre a Planta </string>
    <string name="texto_lirio_da_paz">O lírio-da-paz é uma planta de folhagem bem verde e brilhante, com ampla formação de arbustos. A flor é branca, semelhante a uma pétala, com um pequeno pendão internamente.
    O lírio pode ser tanto uma planta de vaso quanto de solo. Como ele atinge tamanho médio, basta um recipiente ideal para as raízes terem espaço suficiente para se desenvolver, tal qual seria no chão.</string>
    <string name="texto_evonimo_do_japao">O evônimo-do-japão é uma planta ornamental arbustiva bastante presente em ambientes externos e internos. É muito apreciado como cerca-viva, pois embeleza a área e dá privacidade. Na natureza, costuma ser encontrado em áreas próximas ao mar. É levemente tóxico e não deve ser ingerido.</string>
    <string name="texto_bamdu_da_sorte">Uma tradição oriental diz que o Bambu da Sorte deve ser dado de presente em ocasiões que marquem um novo começo, como mudança de casa, casamento, nascimento de uma criança ou na conquista de um novo emprego. Além disso, na hora de presentear, amarre no Bambu da Sorte uma fita vermelha para atrair a boa saúde a quem recebe e ativar ainda mais os poderes místicos da planta.
    O Bambu da Sorte é uma planta com diferentes tipos de modelagem, podendo assim ser incorporada na decoração de diferentes formas, uma vez que ela pode assumir formatos de corações, torres e espirais. Contudo, o Bambu da Sorte trançado ainda é o mais popular de todos.</string>
    <string name="texto_hera">A Hera ou hera inglesa (Hedera helix L.) é uma planta originária da Europa Central e Ocidental. Na natureza, as folhas crescem agarradas em outras árvores e isso lhe rendeu a fama de planta trepadeira.
    Quem sofre de alergias deve ter uma hera em casa, pois a planta tem a capacidade de purificar o ar. Ela filtra os gases poluentes, incluindo o benzeno, xileno e formaldeído.</string>
    <string name="texto_zamioculca">A zamioculcas é uma folhagem ornamental, popular pela rusticidade e beleza, principalmente quando utilizada em interiores e outros locais de baixa luminosidade natural. Sua textura é herbácea, com folhas muito brilhantes, glabras, pinadas e de cor verde-escura.
    Deve ser cultivada sob meia-sombra ou luz indireta, em solo drenável, rico em matéria orgânica e irrigado regularmente, sem encharcar. </string>
    <string name="texto_chamedorea">A Chamaedorea elegans é uma planta tropical, nativa das regiões do México, Guatemala e Belize. Muito utilizada na decoração de ambientes internos, ela não gosta de sol direito e se desenvolve bem em condições de meia sombra.
    A espécie apresenta folhas largas ou finas, dispostas em caules eretos e finos. Além disso, ela  forma touceiras através dos seus rizomas. Outra característica da planta é o seu crescimento lento. </string>

</resources>