<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Descricao_Planta5">

    <LinearLayout
        android:id="@+id/Layout_Voltar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/sub_fundo"
        android:backgroundTintMode="screen"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:ignore="UnknownIdInLayout">


        <ImageView
            android:id="@+id/img_btn_voltar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            app:srcCompat="@drawable/seta_voltar" />

        <TextView
            android:id="@+id/txt_descricao_pag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif"
            android:text="@string/plantas_texto_voltar"
            android:textSize="18sp"
            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="59dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Layout_Conteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            tools:ignore="UselessParent,VisualLintBounds">

            <ImageView
                android:id="@+id/img_planta"
                android:layout_width="match_parent"
                android:layout_height="490dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:contentDescription="@string/img_planta"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/desczamioculca"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txt_titulo_planta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/nome_planta_resistente1"
                android:textSize="40sp"
                android:textColor="@color/titulo_1"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_planta_tamanho"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_tamanho"
                    app:srcCompat="@drawable/tamanho"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/img_planta_temperatura"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_temp"
                    app:srcCompat="@drawable/temperatura"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/img_planta_agua"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_agua"
                    app:srcCompat="@drawable/agua"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_texto_planta"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="60dp"
                android:text="@string/texto_zamioculca"
                android:textColor="@color/titulo_roxo_claro"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/navegation_bar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="650dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/sub_fundo"
        android:backgroundTintMode="screen"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/img_btn_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_home"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/home"
            tools:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/img_btn_tipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_tipos"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/tipos"
            tools:srcCompat="@drawable/tipos" />

        <ImageButton
            android:id="@+id/img_btn_perfil"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btn_perfil"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/perfil"
            tools:ignore="TouchTargetSizeCheck"
            tools:srcCompat="@drawable/perfil" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>