<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Descricao_Planta">

    <LinearLayout
        android:id="@+id/Layout_Voltar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFB26A"
        android:backgroundTintMode="screen"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:ignore="UnknownIdInLayout">

        <ImageButton
            android:id="@+id/img_btn_voltar"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/btn_voltar"
            app:srcCompat="@android:drawable/ic_media_rew"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_descricao_pag"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-40dp"
            android:fontFamily="sans-serif"
            android:text="@string/plantas_texto_voltar"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Base"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navegation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_Voltar">

        <LinearLayout
            android:id="@+id/Layout_Conteudo"
            android:layout_width="match_parent"
            android:layout_height="660dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            tools:ignore="UselessParent,VisualLintBounds">

            <ImageView
                android:id="@+id/img_planta"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="false"
                android:contentDescription="@string/img_planta"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_titulo_planta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="40sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_planta_tamanho"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_tamanho"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/img_planta_temperatura"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_temp"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/img_planta_agua"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_planta_agua"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_texto_planta"
                android:layout_width="298dp"
                android:layout_height="152dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navegation_bar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="650dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="screen"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/img_btn_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_home"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/home"
            tools:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/img_btn_tipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_tipos"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/tipos"
            tools:srcCompat="@drawable/tipos" />

        <ImageButton
            android:id="@+id/img_btn_perfil"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btn_perfil"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/perfil"
            tools:ignore="TouchTargetSizeCheck"
            tools:srcCompat="@drawable/perfil" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>