<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="@color/sub_fundo"
    android:backgroundTintMode="screen"
    tools:context=".Tipos">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="screen"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navegation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_Logo">

        <TextView
            android:id="@+id/txtcategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo_tipos"
            android:textColor="@color/titulo_1"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/Layout_categoria1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_flores"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/flores" />

            <ImageView
                android:id="@+id/img_medicina"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/plantasmedicinais" />

            <ImageView
                android:id="@+id/img_pequenas"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/plantas_pequenas" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_categoria2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            tools:ignore="DuplicateIds">

            <ImageView
                android:id="@+id/img_exotico"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/plantas_exoticas" />

            <ImageView
                android:id="@+id/img_veneno"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/plantas_venenosas" />

            <ImageView
                android:id="@+id/img_outros"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/outras" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtresistente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo_resistente"
            android:textColor="@color/titulo_1"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/Linear_resistente_planta1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="25dp"
            android:background="#00FFFFFF"
            android:backgroundTint="@color/sub_fundo"
            android:backgroundTintMode="screen"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_resistente_planta1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/zamioculca" />

            <TextView
                android:id="@+id/txt_resistente_planta1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/nome_planta_resistente1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear_resistente_planta2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#00FFFFFF"
            android:backgroundTint="@color/sub_fundo"
            android:backgroundTintMode="screen"
            android:orientation="horizontal"
            tools:ignore="DuplicateIds,UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_resistente_planta2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/camedorea" />

            <TextView
                android:id="@+id/txt_resistente_planta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/nome_planta_resistente2"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_Logo"
        android:layout_width="393dp"
        android:layout_height="50dp"
        android:layout_marginBottom="700dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/sub_fundo"
        android:backgroundTintMode="screen"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/navegation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="UnknownIdInLayout,VisualLintBounds" />

    <LinearLayout
        android:id="@+id/navegation_bar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="650dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/sub_fundo"
        android:backgroundTintMode="screen"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/img_btn_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_home"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/home"
            tools:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/img_btn_tipo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_tipos"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/tipos"
            tools:srcCompat="@drawable/tipos" />

        <ImageButton
            android:id="@+id/img_btn_perfil"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/btn_perfil"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/perfil"
            tools:ignore="TouchTargetSizeCheck"
            tools:srcCompat="@drawable/perfil" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>